spacing fixes in print

--- a/css/overrides.css
+++ b/css/overrides.css
@@ -76,6 +76,16 @@ article > header span {
 }
 
 @media print {
+  @page {
+    margin: 10mm 10mm !important;
+    padding: 0!important;
+  }
+
+  main {
+    max-width: none!important;
+    padding: 0 10mm !important;
+  }
+
   a[href]:after {
     content: none !important;
   }
@@ -111,10 +121,10 @@ article > header span {
   }
 
   section article::after {
-    content: "⬩";
-    font-size: 32pt;
+    content: "***";
+    font-size: 24pt;
     display: block;
     text-align: center;
-    padding-top: calc(var(--block-spacing-vertical) / 2);
+    padding-top: calc(var(--block-spacing-vertical));
   }
 }
